== 0.0.1 2007-07-22

* 1 major enhancement(s):
  * Initial release
  * Alpha phase

== 0.0.2 2007-08-01

* Minor enhancement(s):
  * Added config/extended_version13.yml for ECHI version 13 support
  * Added examples/schemas/oracle_echi.sql example schema
  * Changed BOOLEAN fields to char(1) with Y/N possible values (FR#12741)
  * Added the ability to toggle deleting or leaving the FTP files (FR#12702)
  * Removed some extraneous debug info
* 1 Bug fix(es):
  * Bug #12528 - Handle segstart/segstop dates properly
  * Bug #12746 - Properly parse Bytearray for Boolean fields

== 0.0.3 2007-08-10

* Major enhancement(s):
  * Added support for import of ASCII CSV files (FR#12997)
* Minor enhancement(s):
  * Added support of processing 'chr' files only (FR#12996)
  * Added a configuration element to turn logging of file processing to a table on/off
  * Removed the net/ssh library include, as not using sftp for now
* Bug fix(es):
  * Added proper error handling when ftp user does not have delete rights

== 0.0.4 2007-08-TBD

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):
  * Bug #13062 - Corrected log table population