@@ -3,7 +3,6 @@ License.txt
 Manifest.txt
 README.txt
 Rakefile
-echi-converter
 lib/main.rb
 lib/echi-converter/version.rb
 lib/database.rb
@@ -22,9 +21,11 @@ config/application.yml
 config/database.yml
 config/extended_version12.yml
 config/extended_version13.yml
+config/install_files.yml
 db/migrate/001_create_echi_records.rb
 db/migrate/002_create_echi_logs.rb
-bin/echi-converter-create
+bin/echi-converter
 examples/extended_version12/chr0003
 examples/extended_version12/chr0003.txt
+examples/schemas/oracle_echi.sql
 
