@@ -24,12 +24,19 @@
   * Added support of processing 'chr' files only (FR#12996)
   * Added a configuration element to turn logging of file processing to a table on/off
   * Removed the net/ssh library include, as not using sftp for now
+  * Added dependencies for other gems in the Rakefile for auto-install from Rubyforge
 * Bug fix(es):
   * Added proper error handling when ftp user does not have delete rights
 
 == 0.0.4 2007-08-TBD
 
 * Major enhancement(s):
+  * Removed the 'echi-conveterter-create' bin file and replaced with 'echi-converter' to have one uniform executable
 * Minor enhancement(s):
+  * Added configuration file config/install_files.yml for the new install method
+  * Added support for a monitor process using the Daemons library
+  * Reworked the way you create, run, start and stop a project that has been created, see the README.txt for details as well as the website
+  * Added the ability to set specific table names when using a specific PCO application
+  * Added the ability to upgrade the files when a new gem is installed
 * Bug fix(es):
   * Bug #13062 - Corrected log table population
